# FlingEngine

./: .gitignore  .gitmodules  .gitmodules.orig  .gitmodules.swp  .gitmodules_BACKUP_12040  .gitmodules_BASE_12040.swp  .gitmodules_LOCAL_12040  .gitmodules_LOCAL_12040.swp  .gitmodules_REMOTE_12040.swp  .travis.yml  .travis_template  CMakeLists.txt  CMakeLists.txt.orig  GenerateDocs.sh  Init.bat  Init.sh  Init_VS_2017.bat  Jenkinsfile  LICENSE  README.md  appveyor.yml  build-debug.sh  build-release.sh  build-shipping.sh  build-vs-clang.sh  build.bat  buildVS.bat  buildVS.sh  doxyfile  get_code_cov  imgui.ini  run-cpp-check.sh  run-mem-report.sh
.github/: pull_request_template.md
Assets/: TestFile.txt  (+1 more)
FlingEngine/: CMakeLists.txt  EngineConf.ini  FlingEngine.vcxproj  FlingEngine.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  main.cpp
FlingEngine/Core/inc/: ComponentManager.h  Engine.h  Engine.h.orig  FlingEngine.h  FlingMath.h  GitVersion_TEMPLATE.h.in  Input.h  Serilization.h  Version.h
FlingEngine/Core/inc/Input/: Input.h  Input.inl  Key.h  KeyState.h  LinuxInput.h  WindowsInput.h  WindowsKeycodes.h
FlingEngine/Core/inc/Misc/: CommandLine.h
FlingEngine/Core/src/: ComponentManager.cpp  Engine.cpp  Engine.cpp.orig  FlingMath.cpp  Version.cpp
FlingEngine/Core/src/Input/: Key.cpp  LinuxInput.cpp  WindowsInput.cpp
FlingEngine/Core/src/Misc/: CommandLine.cpp
FlingEngine/Editor/inc/: BaseEditor.h  EditableComponent.h  FileBrowser.h  ImFileBrowser.hpp
FlingEngine/Editor/src/: BaseEditor.cpp  FileBrowser.cpp
FlingEngine/Foundation/: CMakeLists.txt
FlingEngine/Foundation/inc/: FlingExports.h  FlingLinuxExports.h  FlingWindowsExports.h  Foundation.h  FoundationAPI.h  Random.h
FlingEngine/Foundation/src/: Foundation.cpp  Memory.cpp  Random.cpp
FlingEngine/Gameplay/inc/: Camera.h  FirstPersonCamera.h  Game.h  Level.h  World.h  World.inl
FlingEngine/Gameplay/inc/Components/: Name.hpp  Transform.h  Transform.hpp
FlingEngine/Gameplay/src/: BaseGame.cpp  Camera.cpp  FirstPersonCamera.cpp  Game.cpp  Level.cpp  World.cpp
FlingEngine/Gameplay/src/Components/: Transform.cpp
FlingEngine/Graphics/inc/: Buffer.h  CommandBuffer.h  Cubemap.h  DebugSubpass.h  DepthBuffer.h  DesktopWindow.h  FlingImgui.h  FlingVulkan.h  FlingWindow.h  FrameBuffer.h  GBuffer.h  GeometrySubpass.h  GraphicsHelpers.h  GraphicsPipeline.h  ImGuiSubpass.h  Image.h  Imgui.h  ImguiDisplay.h  Instance.h  LogicalDevice.h  MappedBuffer.cpp  MappedBuffer.h  Material.h  MaterialRegistry.hpp  MeshRenderer.h  Model.h  MultiSampler.h  OffscreenSubpass.h  PhyscialDevice.h  RenderPipeline.h  Renderer.h  Renderer.h.orig  Sampler.hpp  Shader.h  ShaderProgram.h  ShaderResourcePool.h  Subpass.h  SwapChain.h  UniformBufferObject.h  Vertex.h  (+1 more)
FlingEngine/Graphics/inc/Lighting/: DirectionalLight.hpp  Lighting.hpp  PointLight.hpp
FlingEngine/Graphics/inc/ShaderProgram/: ShaderProgramManager.h
FlingEngine/Graphics/inc/ShaderPrograms/: ShaderProgram.h  ShaderProgramDeferred.h  ShaderProgramManager.h  ShaderProgramPbr.h  ShaderProgramReflections.h  ShaderPrograms.h
FlingEngine/Graphics/src/: Buffer.cpp  CommandBuffer.cpp  Cubemap.cpp  DebugSubpass.cpp  DepthBuffer.cpp  DesktopWindow.cpp  FlingImgui.cpp  FlingWindow.cpp  FrameBuffer.cpp  GBuffer.cpp  GeometrySubpass.cpp  GraphicsHelpers.cpp  GraphicsPipeline.cpp  ImGuiSubpass.cpp  ImguiDisplay.cpp  Instance.cpp  LogicalDevice.cpp  MappedBuffer.cpp  Material.cpp  MaterialRegistry.cpp  MeshRenderer.cpp  Model.cpp  MultiSampler.cpp  OffscreenSubpass.cpp  PhyscialDevice.cpp  RenderPipeline.cpp  Renderer.cpp  Renderer.cpp.orig  Sampler.cpp  Shader.cpp  ShaderProgram.cpp  ShaderResourcePool.cpp  Subpass.cpp  SwapChain.cpp  UniformBufferObject.cpp  VulkanApp.cpp
FlingEngine/Graphics/src/ShaderProgram/: ShaderProgramManager.cpp
FlingEngine/Graphics/src/ShaderPrograms/: ShaderProgram.cpp  ShaderProgramDeferred.cpp  ShaderProgramManager.cpp  ShaderProgramPbr.cpp  ShaderProgramReflections.cpp  ShaderPrograms.cpp
FlingEngine/Physics/inc/: PhysicsManager.h
FlingEngine/Physics/inc/Components/: Rigidbody.cpp  Rigidbody.h
FlingEngine/Physics/src/: PhysicsManager.cpp
FlingEngine/Platform/inc/: FlingExports.h  FlingLinuxExports.h  FlingWindowsExports.h  ImGuiInputBinding.hpp  LinuxInput.h  LinuxKeycodes.h  Platform.h  PlatformLinux.h  PlatformWindows.h  PlatformWindows.h.orig  WindowsInput.h  WindowsKeycodes.h
FlingEngine/Platform/src/: LinuxInput.cpp  WindowsInput.cpp
FlingEngine/Resources/inc/: File.h  FlingConfig.h  FlingPaths.h  Guid.h  HDRImage.h  Image.h  JsonFile.h  Resource.h  ResourceManager.h  Texture.h
FlingEngine/Resources/src/: File.cpp  FlingAssetPaths.cpp.in  FlingConfig.cpp  FlingPaths.cpp  Guid.cpp  HDRImage.cpp  Image.cpp  JsonFile.cpp  Resource.cpp  ResourceManager.cpp  Texture.cpp
FlingEngine/Scripting/inc/: LuaManager.h  LuaScript.h  ScriptComponent.h
FlingEngine/Scripting/src/: LuaManager.cpp  LuaScript.cpp  ScriptComponent.cpp
FlingEngine/Shaders/: compileShaders.py  shader.vert
FlingEngine/Utils/inc/: CircularBuffer.hpp  FlingTypes.h  FreeList.h  Logger.h  Memory.h  Memory_BACKUP_1991.h  Memory_BASE_1991.h  Memory_LOCAL_1991.h  Memory_REMOTE_1991.h  MovingAverage.hpp  NonCopyable.hpp  Random.h  Singleton.hpp  StackAllocator.h  Stats.h  Timing.h  pch.h
FlingEngine/Utils/src/: FreeList.cpp  Logger.cpp  Memory.cpp  Random.cpp  StackAllocator.cpp  Stats.cpp  Timing.cpp
FlingTests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  FlingTests.sln  FlingTests.vcxproj  FlingTests.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters
FlingTests/src/: CommandLineTests.cpp  EngineCoreTests.cpp  RendererTests.cpp  ResourceTests.cpp  UtilsTests.cpp
Sandbox/: ALL_BUILD.vcxproj  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Sandbox.sln  Sandbox.vcxproj  Sandbox.vcxproj.filters  main.cpp
Sandbox/Editor/inc/: SandboxEditor.h
Sandbox/Editor/src/: SandboxEditor.cpp
Sandbox/Gameplay/inc/: Mover.h  SandboxGame.h  SandboxUI.h
Sandbox/Gameplay/src/: SandboxGame.cpp  SandboxGame.cpp.orig  SandboxUI.cpp
(+1061 files in other folders)
